--- a/src/partials/components.html
+++ b/src/partials/components.html
@@ -12,129 +12,161 @@
     </p>
 
     <ul class="components-list list">
-      <li class="components-item">
-        <img
-          class="components-img"
-          srcset="
-            ../img/unique_components/chocolate-mobile-tablet@1x.png 224w,
-            ../img/unique_components/chocolate-mobile-tablet@2x.png 448w,
-            ../img/unique_components/chocolate@1x.png               206w,
-            ../components-img/unique_components/chocolate@2x.png    412w
-          "
-          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-          src="../img/unique_components/chocolate-mobile-tablet@1x.png"
-          alt="chocolate"
-        />
-        <h3 class="components-subtitle">milk chocolate</h3>
+      <li class="components-item comp-item-tablet">
+        <div class="overlay-front">
+          <!-- <div class="overlay-content"> -->
+          <img
+            class="components-img"
+            srcset="
+              ../img/unique_components/chocolate-mobile-tablet@1x.png 224w,
+              ../img/unique_components/chocolate-mobile-tablet@2x.png 448w,
+              ../img/unique_components/chocolate@1x.png               206w,
+              ../components-img/unique_components/chocolate@2x.png    412w
+            "
+            sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+            src="../img/unique_components/chocolate-mobile-tablet@1x.png"
+            alt="chocolate"
+          />
+          <h3 class="components-subtitle">milk chocolate</h3>
+          <!-- </div> -->
+        </div>
 
         <!-- overlay -->
-        <div class="overlay-thumba">
-          <h3 class="section-subtitle overlay-subtitle">milk chocolate</h3>
-          <ul class="overlay-list">
-            <li class="overlay-btn overlay-components">chocolate</li>
-            <li class="overlay-btn overlay-components list">the benefits</li>
-          </ul>
-          <p class="section-text">
-            Milk chocolate is a solid chocolate confectionery containing cocoa,
-            sugar and milk. It is the most consumed type of chocolate. Chocolate
-            was originally sold and consumed as a beverage in pre-Columbian
-            times. Although four-fifths of all milk chocolate is sold in the
-            United States and Europe.
-          </p>
+        <div class="overlay-back">
+          <div class="overlay-content">
+            <h3 class="section-subtitle overlay-subtitle">milk chocolate</h3>
+            <ul class="overlay-list">
+              <li class="overlay-btn overlay-components">chocolate</li>
+              <li class="overlay-btn overlay-components list">the benefits</li>
+            </ul>
+            <p class="section-text">
+              Milk chocolate is a solid chocolate confectionery containing
+              cocoa, sugar and milk. It is the most consumed type of chocolate.
+              Chocolate was originally sold and consumed as a beverage in
+              pre-Columbian times. Although four-fifths of all milk chocolate is
+              sold in the United States and Europe.
+            </p>
+          </div>
         </div>
       </li>
-      <li class="components-item">
-        <img
-          class="components-img"
-          srcset="
-            ../img/unique_components/milk-mobile-tablet@1x.png 224w,
-            ../img/unique_components/milk-mobile-tablet@2x.png 448w,
-            ../img/unique_components/milk@1x.png               206w,
-            ../components-img/unique_components/milk@2x.png    412w
-          "
-          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-          src="../img/unique_components/milk-mobile-tablet@1x.png"
-          alt=""
-        />
-        <h3 class="components-subtitle">Milk</h3>
-        <!-- overlay -->
-        <div class="overlay-thumba">
-          <h3 class="section-subtitle overlay-subtitle">Milk</h3>
-          <ul class="overlay-list">
-            <li class="overlay-btn overlay-components">milk</li>
-            <li class="overlay-btn overlay-components list">the benefits</li>
-          </ul>
-          <p class="section-text">
-            Milk chocolate is a solid chocolate confectionery containing cocoa,
-            sugar and milk. It is the most consumed type of chocolate. Chocolate
-            was originally sold and consumed as a beverage in pre-Columbian
-            times. Although four-fifths of all milk chocolate is sold in the
-            United States and Europe.
-          </p>
-        </div>
-      </li>
-      <li class="components-item">
-        <img
-          class="components-img"
-          srcset="
-            ../img/unique_components/nuts-mobile-tablet@1x.png 224w,
-            ../img/unique_components/nuts-mobile-tablet@2x.png 448w,
-            ../img/unique_components/nuts@1x.png               206w,
-            ../components-img/unique_components/nuts@2x.png    412w
-          "
-          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-          src="../img/unique_components/nuts-mobile-tablet@1x.png"
-          alt=""
-        />
 
-        <h3 class="components-subtitle">nuts</h3>
+      <!-- card 2 -->
+      <li class="components-item">
+        <div class="overlay-front">
+          <!-- <div class="overlay-content"> -->
+          <img
+            class="components-img"
+            srcset="
+              ../img/unique_components/milk-mobile-tablet@1x.png 224w,
+              ../img/unique_components/milk-mobile-tablet@2x.png 448w,
+              ../img/unique_components/milk@1x.png               206w,
+              ../components-img/unique_components/milk@2x.png    412w
+            "
+            sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+            src="../img/unique_components/milk-mobile-tablet@1x.png"
+            alt=""
+          />
+          <h3 class="components-subtitle">Milk</h3>
+          <!-- </div> -->
+        </div>
         <!-- overlay -->
-        <div class="overlay-thumba">
-          <h3 class="section-subtitle overlay-subtitle">nuts</h3>
-          <ul class="overlay-list">
-            <li class="overlay-btn overlay-components">nuts</li>
-            <li class="overlay-btn overlay-components list">the benefits</li>
-          </ul>
-          <p class="section-text">
-            Milk chocolate is a solid chocolate confectionery containing cocoa,
-            sugar and milk. It is the most consumed type of chocolate. Chocolate
-            was originally sold and consumed as a beverage in pre-Columbian
-            times. Although four-fifths of all milk chocolate is sold in the
-            United States and Europe.
-          </p>
+        <div class="overlay-back">
+          <div class="overlay-content">
+            <h3 class="section-subtitle overlay-subtitle">Milk</h3>
+            <ul class="overlay-list">
+              <li class="overlay-btn overlay-components">milk</li>
+              <li class="overlay-btn overlay-components list">the benefits</li>
+            </ul>
+
+            <p class="section-text">
+              Milk is a white liquid food produced by the mammary glands of
+              mammals. It is the primary source of nutrition for young mammals
+              (including breastfed human infants) before they are able to digest
+              solid food.Early-lactation milk, which is called colostrum,
+              contains
+            </p>
+          </div>
         </div>
       </li>
+
+      <!-- card3 -->
       <li class="components-item">
-        <img
-          class="components-img"
-          srcset="
-            ../img/unique_components/coffee-mobile-tablet@1x.png 224w,
-            ../img/unique_components/coffee-mobile-tablet@2x.png 448w,
-            ../img/unique_components/coffe@1x.png                206w,
-            ../components-img/unique_components/coffee@2x.png    412w
-          "
-          sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
-          src="../img/unique_components/coffee-mobile-tablet@1x.png"
-          alt=""
-        />
-        <h3 class="components-subtitle">SEMI - SWEET CHOCOLATE</h3>
+        <div class="overlay-front">
+          <!-- <div class="overlay-content"> -->
+          <img
+            class="components-img"
+            srcset="
+              ../img/unique_components/nuts-mobile-tablet@1x.png 224w,
+              ../img/unique_components/nuts-mobile-tablet@2x.png 448w,
+              ../img/unique_components/nuts@1x.png               206w,
+              ../components-img/unique_components/nuts@2x.png    412w
+            "
+            sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+            src="../img/unique_components/nuts-mobile-tablet@1x.png"
+            alt=""
+          />
+
+          <h3 class="components-subtitle">nuts</h3>
+          <!-- </div> -->
+        </div>
+        <!-- overlay -->
+        <div class="overlay-back">
+          <div class="overlay-content">
+            <h3 class="section-subtitle overlay-subtitle">nuts</h3>
+            <ul class="overlay-list">
+              <li class="overlay-btn overlay-components">nuts</li>
+              <li class="overlay-btn overlay-components list">the benefits</li>
+            </ul>
+            <p class="section-text">
+              Almonds, pistachios, and walnuts are some types of nuts that
+              contain healthy nutrients. When eaten as part of a nutrient-dense
+              diet, these 9 nuts may offer benefits such as reducing your risk
+              of heart disease. They’re a good source of fiber, healthy fats,
+              and plant protein. Plus, they’re...
+            </p>
+          </div>
+        </div>
+      </li>
+
+      <!-- card4 -->
+      <li class="components-item comp-item-tab-sec">
+        <div class="overlay-front">
+          <!-- <div class="overlay-content"> -->
+          <img
+            class="components-img"
+            srcset="
+              ../img/unique_components/coffee-mobile-tablet@1x.png 224w,
+              ../img/unique_components/coffee-mobile-tablet@2x.png 448w,
+              ../img/unique_components/coffe@1x.png                206w,
+              ../components-img/unique_components/coffee@2x.png    412w
+            "
+            sizes="(min-width: 1200px) 206px, (min-width: 768px) 224px, (min-width: 320px) 224px, 100vw"
+            src="../img/unique_components/coffee-mobile-tablet@1x.png"
+            alt=""
+          />
+          <h3 class="components-subtitle">SEMI - SWEET CHOCOLATE</h3>
+          <!-- </div> -->
+        </div>
 
         <!-- overlay -->
-        <div class="overlay-thumba">
-          <h3 class="section-subtitle overlay-subtitle">
-            semi - sweet chocolate
-          </h3>
-          <ul class="overlay-list">
-            <li class="overlay-btn overlay-components">sweet chocolate</li>
-            <li class="overlay-btn overlay-components list">the benefits</li>
-          </ul>
-          <p class="section-text">
-            Milk chocolate is a solid chocolate confectionery containing cocoa,
-            sugar and milk. It is the most consumed type of chocolate. Chocolate
-            was originally sold and consumed as a beverage in pre-Columbian
-            times. Although four-fifths of all milk chocolate is sold in the
-            United States and Europe.
-          </p>
+        <div class="overlay-back">
+          <div class="overlay-content">
+            <h3 class="section-subtitle overlay-subtitle">
+              semi - sweet chocolate
+            </h3>
+            <ul class="overlay-list">
+              <li class="overlay-btn overlay-components">sweet chocolate</li>
+              <li class="overlay-btn overlay-components list">the benefits</li>
+            </ul>
+            <p class="section-text">
+              Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One
+              of the best ways to gain an understanding of this type of
+              chocolate is to compare it to a different type of chocolate.
+              Semisweet is darker than milk chocolate. In a taste comparison, it
+              has a slightly bitter taste whereas milk chocolate is sweeter and
+              more mellow.
+            </p>
+          </div>
         </div>
       </li>
     </ul>
