--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,3 +1,16 @@
+.components-section {
+  padding-top: 72px;
+}
+@media only screen and (min-width: 768px) {
+  .components-section {
+    padding-top: 100px;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .components-section {
+    padding-top: 128px;
+  }
+}
 @media only screen and (min-width: 768px) {
   .components-title {
     margin-left: auto;
@@ -22,42 +35,6 @@
   }
 }
 
-.components-item {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 270px;
-  border-radius: 15px;
-
-  background-color: var(--reserve-bg-color);
-}
-.components-item:not(:last-child) {
-  margin-bottom: 20px;
-}
-@media only screen and (min-width: 768px) {
-  .components-item:not(:last-child) {
-    margin-bottom: 0;
-  }
-}
-.components-item:nth-child(2n) {
-  background: #ffffff;
-  border: 1px solid var(--reserve-bg-color);
-  border-radius: 15px;
-}
-.components-item:nth-child(3) {
-  background-color: black;
-}
-@media only screen and (min-width: 375px) and (max-width: 767px) {
-  .components-item {
-    width: 335px;
-    height: 270px;
-  }
-}
-@media only screen and (min-width: 768px) {
-  .components-item {
-    width: 336px;
-  }
-}
 @media only screen and (min-width: 768px) {
   .components-list {
     display: flex;
@@ -74,21 +51,6 @@
   }
 }
 
-.components-subtitle {
-  margin-left: 28px;
-  margin-top: 25px;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.28;
-
-  letter-spacing: -0.02em;
-  text-transform: uppercase;
-
-  color: #ffffff;
-}
-.components-item:nth-child(2n) .components-subtitle {
-  color: black;
-}
 .components-img {
   margin-top: 28px;
   margin-left: 56px;
@@ -97,50 +59,162 @@
 @media only screen and (min-width: 1200px) {
   .components-img {
     margin-left: 28px;
+    margin-right: 36px;
   }
 }
 
-/* overlay */
-.overlay-thumba {
-  padding: 28px;
+.components-item {
+  margin-bottom: 20px;
+  position: relative;
+  display: flex;
+  width: 100%;
+  max-width: 335px;
+  height: 270px;
+
+  /*  set 3d properties  */
+  transform-style: preserve-3d;
+  perspective: 800px;
+  cursor: context-menu;
+}
+@media only screen and (min-width: 375px) and (max-width: 767px) {
+  .components-item {
+    width: 335px;
+    height: 270px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .components-item {
+    width: 336px;
+  }
+}
+/* SIDES */
+.components-item .overlay-front,
+.components-item .overlay-back {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+
   border-radius: 15px;
-  transform: translateY(100%);
-  background-color: #ffffff;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  transition: transform 0.8s ease-in-out;
 }
-.components-item:hover .overlay-thumba,
-.components-item:focus .overlay-thumba {
-  transform: translate(0);
+.components-item .overlay-back {
+  padding: 28px;
 }
 @media only screen and (min-width: 1200px) {
-  .overlay-thumba {
+  .components-item .overlay-back {
     padding: 20px;
   }
 }
+.components-item .overlay-front {
+  width: 100%;
+  height: 270px;
+  background-color: var(--reserve-bg-color);
+}
+@media only screen and (min-width: 375px) and (max-width: 767px) {
+  .components-item .overlay-front {
+    width: 335px;
+    height: 270px;
+  }
+}
+.components-item:not(:last-child) .overlay-front {
+  margin-bottom: 20px;
+}
+@media only screen and (min-width: 768px) {
+  .components-item:not(:last-child) .overlay-front {
+    margin-bottom: 0;
+  }
+}
+.components-item:nth-child(2n) .overlay-front {
+  background: var(--additional-bg-color);
+  border: 1px solid var(--reserve-bg-color);
+  border-radius: 15px;
+}
+.components-item:nth-child(3) .overlay-front {
+  background-color: black;
+}
+
+.components-item .overlay-back {
+  background-color: #ffffff;
+  transform: rotateY(180deg);
+}
+.components-item:hover .overlay-front {
+  transform: rotateY(-180deg);
+}
+.components-item:hover .overlay-back {
+  transform: rotateY(0deg);
+}
+
+/* CONTENTS */
+.components-item .overlay-content {
+  width: 100%;
+  height: 100%;
+  color: var(--additional-bg-color);
+  transform: translateZ(100px) scale(0.86);
+}
+.components-subtitle {
+  margin-left: 28px;
+  margin-top: 25px;
+  margin-bottom: 28px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.28;
+
+  letter-spacing: -0.02em;
+  text-transform: uppercase;
+
+  color: var(--additional-bg-color);
+}
+@media only screen and (min-width: 1200px) {
+  .components-subtitle {
+    margin-top: 36px;
+  }
+}
+.components-item:nth-child(2n) .components-subtitle {
+  color: var(--forms-text-color);
+}
+
 .overlay-subtitle {
+  margin-bottom: 8px;
+
+  font-size: 18px;
+  line-height: 1.22;
   letter-spacing: -0.03em;
   text-transform: uppercase;
+
+  color: var(--main-dark-text-color);
+}
+.section-text {
+  font-size: 14px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
+
+  color: var(--main-dark-text-color);
 }
 .overlay-list {
   display: flex;
+  align-items: center;
   gap: 6px;
-  margin-top: 8px;
+
   margin-bottom: 14px;
-}
-.overlay-items {
-  border-radius: 35px;
-  background-color: var(--reserve-bg-color);
 }
 .overlay-components {
   padding: 6px 16px;
   border-radius: 35px;
 }
-.overlay-components:nth-child(2n) {
-  border: 1px solid #fd9222;
-  background-color: #fafafa;
-  color: var(--main-dark-text-color);
+
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .comp-item-tablet {
+    order: -2;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
+  .comp-item-tab-sec {
+    order: -1;
+  }
 }
