--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -14,7 +14,9 @@
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+      <a
+        class="mobile-menu-link mobile-menu-text mobile-menu-line link"
+        href="#made"
         >How it’s made?</a
       >
     </li>
@@ -24,12 +26,16 @@
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+      <a
+        class="mobile-menu-link mobile-menu-text mobile-menu-line link"
+        href="#sellers-section"
         >Top sellers</a
       >
     </li>
     <li>
-      <a class="mobile-menu-link mobile-menu-text mobile-menu-line link" href=""
+      <a
+        class="mobile-menu-link mobile-menu-text mobile-menu-line link"
+        href="#reviews"
         >Chocolate is loved</a
       >
     </li>
