--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,8 +1,8 @@
-<header class="header-section">
+<header class="header-section" id="header">
   <div class="header-div container">
     <nav class="header-nav">
       <a class="logo header-link link" href="./index.html"
-        >SIMPLY CHOCOLATE
+        ><span class="span-simply">SIMPLY</span> CHOCOLATE
         <svg class="header-logo">
           <use href="../img/choco-icons.svg#icon-chocolate"></use>
         </svg>
@@ -12,16 +12,22 @@
           <a class="header-nav-link menu-link link" href="./index.html">Home</a>
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link menu-link link" href="">How it’s made?</a>
+          <a class="header-nav-link menu-link link" href="#made"
+            >How it’s made?</a
+          >
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link menu-link link" href="">Our products</a>
+          <a class="header-nav-link menu-link link" href="#products"
+            >Our products</a
+          >
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link menu-link link" href="">Top sellers</a>
+          <a class="header-nav-link menu-link link" href="#sellers-section"
+            >Top sellers</a
+          >
         </li>
         <li class="header-nav-li">
-          <a class="header-nav-link menu-link link" href=""
+          <a class="header-nav-link menu-link link" href="#reviews"
             >Chocolate is loved</a
           >
         </li>
