--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -1,7 +1,7 @@
 <section class="subscribe-section section">
     <div class="subscribe-container container">
-        <h2 class="subscribe-title">EXPLORE OUR NEW <br> CHOCOLATE FIRST</h2>
-        <p class="subscribe-subtitle">
+        <h2 class="section-title subscribe-title">EXPLORE OUR NEW <br> CHOCOLATE FIRST</h2>
+        <p class="section-text subscribe-subtitle">
             From the velvety texture to the rich and complex flavor, our New Chocolate is a true indulgence that will
             leave
             you
@@ -11,28 +11,5 @@
             that is sure to please.
         </p>
         <button type="button" class="subscribe-btn section-btn">Subscribe</button>
-    </div>
-</section>
-
-
-
-<!-- modal subscribe -->
-
-
-<section class="subscribe-modal-section section">
-    <div class="container subscribe-modal-container">
-        <div class="subscribe-modal-part">
-            <img class="subscribe-modal-image" src="" alt="banana" width="311" height="169" />
-            <h2 class="subscribe-modal-title">Explore our
-                <span class="modal-span-chocolate">new chocolate</span> first!
-            </h2>
-            <div class="subscribe-modal-form">
-                <form>
-                    <input type="email" placeholder="Enter your email" class="subscribe-form-input">
-                </form>
-                <button class="subscribe-modal-btn subscribe-btn" type="button">Submit</button>
-            </div>
-        </div>
-
     </div>
 </section>
