--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,10 +1,9 @@
 .footer-con {
     padding-top: 32px;
-    padding-bottom: 32px;
-    background-color: var(--secondary-bg-color);}
-
+    padding-bottom: 32px;}
+.footer-section {background-color: var(--secondary-bg-color);}
 .footer-call {
-    max-width: 300px;
+    width: 300px;
     font-family: var(--primary-font);
     font-weight: 500;
     font-size: 24px;
@@ -25,12 +24,22 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: flex-start;}
+.footer-contact-list {display: flex;
+flex-direction: column;
+gap: 4px;}
 
 .footer-contact {color: var(--main-light-text-color);
     margin-bottom: 32px;}
 
-.footer-contact-item {color: var(--main-light-text-color);
-    transition: var(--transition-dur-and-func);}
+.footer-contact-item {font-family: var(--primary-font);
+    font-weight: 400;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: center;
+        letter-spacing: -0.02em;
+    color: var(--main-light-text-color);
+    transition: var(--transition-dur-and-func);
+}
 
 .footer-contact-text {
     color: var(--main-light-text-color);
@@ -43,17 +52,19 @@
 .footer-soc {display: flex;
     flex-wrap: nowrap;
     gap: 14px;}
-.footer-soc-icon {transition: var(--transition-dur-and-func);}
+.footer-soc-icon {height: 22px;
+    transition: var(--transition-dur-and-func);}
 
-.footer-soc-icon:hover {color: var(--hover-icons-color)}
+.soc-icon:hover {stroke: var(--hover-icons-color)}
 .footer-contact-item:hover {color: var(--hover-icons-color)}
 .footer-link-menu:hover {color: var(--hover-icons-color);}
 
-.footer-soc-icon:focus {color: var(--hover-icons-color)}
+.soc-icon:focus {stroke: var(--hover-icons-color)}
 .footer-contact-item:hover {color: var(--hover-icons-color)}
 .footer-link-menu:focus {color: var(--hover-icons-color);}
 .soc-icon {
-    fill: var(--main-light-text-color);
+    fill: transparent;
+    stroke: var(--main-light-text-color);
     width: 22px;
     height: 22px;
 }
@@ -64,7 +75,8 @@
     width: 100%;
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);}
 
-.footer-up-part {margin-bottom: 32px;}
+.footer-up-part {margin-bottom: 32px;
+align-items: center;}
 
 .footer-link-menu {
     font-family: var(--primary-font);
@@ -81,7 +93,7 @@
 .footer-menu-list {display: flex;
     flex-direction: column;
     gap: 18px;}
-.footer-contact-list  ul li {margin: 0 4px;}
+
 
 .footer-menu-list:nth-child(5) {margin-bottom: 0;}
 
@@ -93,6 +105,9 @@
     .footer-call {font-weight: 500;
         font-size: 28px;
         line-height: 34px;}
+    .footer-call-rest {font-size: 28px;
+        line-height: 34px;
+        letter-spacing: -0.02em;}
 
     .footer-up-part::after {display: none;}
 
@@ -109,7 +124,7 @@
 
     .footer-contact {margin-bottom: 0;}
     .footer-soc {gap: 18px;}
-
+    .footer-soc-icon {height: 24px;}
     .soc-icon {width: 24px;
         height: 24px;}
 
@@ -124,3 +139,12 @@
     .footer-menu-list {flex-direction: row;
         gap: 24px;}}
 
+@media screen and (min-width: 1200px) {
+.footer-con {height: 270px;}    
+.footer-call {font-size: 28px;
+    line-height: 34px;
+    letter-spacing: -0.02em;}
+.footer-call-rest {font-size: 28px;
+    line-height: 34px;
+    letter-spacing: -0.02em;}
+.footer-up-part {margin-bottom: 62px;}}
