Додав css та js
Додав css + js. Выправив помилку с тегу сектора products.

Залишив знаки оклику на тому не працюючому box-sizing: inherit. я не розумію навіщо це писати якшо за замовчуванням завжди пишуть:
*,
*::before,
*::after {
  box-sizing: border-box;
!!!!!!!!!!!!!!!!!!!

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="produts container" id="products">
+<section class="products container" id="products">
   <h2 class="products-title"><span>Our</span> Products</h2>
   <div class="swiper my-swiper">
     <ul class="swiper-wrapper">
