--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,13 +1,13 @@
 html {
   box-sizing: border-box;
 }
-
+/* ????????????????? */
 *,
 *::before,
 *::after {
   box-sizing: inherit;
 }
-
+/* ????????????????? */
 :root {
   /* FONT */
 
