--- a/src/css/sellers.css
+++ b/src/css/sellers.css
@@ -1,4 +1,15 @@
+@media only screen and (min-width: 768px) {
+   .top-section {
+    padding-bottom: 100px;
+  }
 
+@media only screen and (min-width: 1200px) {
+   .top-section {
+    padding-bottom: 128px;
+  }
+}
+
+}
 .top-container {
     position: relative;
 }
@@ -6,11 +17,17 @@
 .top-sellers-title {
     margin-bottom: 32px;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1,2;
     text-align: center;
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: var(--accent-text-color);
+}
+
+@media only screen and (min-width: 768px) {
+   .top-sellers-title {
+    margin-bottom: 50px;
+  }
 }
 
 .sellers-span {
@@ -20,7 +37,7 @@
 @media only screen and (min-width: 768px) {
     .top-sellers-title {
         font-size: 24px;
-        line-height: 28px;
+        line-height: 1.16;
     }
 }
 
@@ -57,9 +74,16 @@
     margin-bottom: 32px;
     max-width: 306px;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.28;
     letter-spacing: -0.02em;
     color: var(--main-dark-text-color);
+}
+
+@media only screen and (min-width: 768px) {
+    .top-paragraph {
+    margin-top: 32px;
+    margin-bottom: 0;
+    }
 }
 
 .top-button {
@@ -71,7 +95,7 @@
     background: var(--reserve-bg-color);
     border-radius: 100px;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 1.21;
     color: var(--main-light-text-color);
     border: none;
     transition: var(--transition-dur-and-func);
@@ -81,10 +105,11 @@
     .top-button {
         position: absolute;
         right: 4.1%;
-        top: 80%;
+        top: 87%;
         padding: 14px 40px;
         font-size: 18px;
-        line-height: 22px;
+        line-height: 1.22px;
+        margin: 0;
     }
 }
 
