--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section top-section">
     <div class="top-container container">
         <h2 class="top-sellers-title">TOP <span class="sellers-span">SELLERS</span></h2>
         <ul class="top-list list">
