додав js для модального вікна

--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,6 +1,6 @@
 <section class="section top-section">
     <div class="top-container container">
-        <h2 class="top-sellers-title">TOP <span class="sellers-span">SELLERS</span></h2>
+        <h2 class="top-sellers-title">top <span class="sellers-span">sellers</span></h2>
         <ul class="top-list list">
             <li class="top-item">
                 <picture>
@@ -42,6 +42,6 @@
                     src="../img/top_sellers/choco_three@1x.jpg" alt="Chocolate tower">
             </li>
         </ul>
-        <button type="submit" class="top-button submit">Buy now</button>
+        <button type="submit" class="top-button section-btn js-open-modal">Buy now</button>
     </div>
 </section>
