--- a/src/css/sellers.css
+++ b/src/css/sellers.css
@@ -91,11 +91,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    min-width: 120px;
+        height: 41px;
     padding: 12px 28px;
     background: var(--reserve-bg-color);
     border-radius: 100px;
-    font-size: 14px;
-    line-height: 1.21;
     color: var(--main-light-text-color);
     border: none;
     transition: var(--transition-dur-and-func);
@@ -104,6 +104,8 @@
 @media only screen and (min-width: 768px) {
     .top-button {
         position: absolute;
+        min-width: 162px;
+        height: 50px;
         right: 4.1%;
         top: 87%;
         padding: 14px 40px;
