--- a/src/css/sellers.css
+++ b/src/css/sellers.css
@@ -1,15 +1,16 @@
 @media only screen and (min-width: 768px) {
-   .top-section {
-    padding-bottom: 100px;
-  }
+    .top-section {
+        padding-bottom: 100px;
+    }
 
-@media only screen and (min-width: 1200px) {
-   .top-section {
-    padding-bottom: 128px;
-  }
+    @media only screen and (min-width: 1200px) {
+        .top-section {
+            padding-bottom: 128px;
+        }
+    }
+
 }
 
-}
 .top-container {
     position: relative;
 }
@@ -17,7 +18,7 @@
 .top-sellers-title {
     margin-bottom: 32px;
     font-size: 20px;
-    line-height: 1,2;
+    line-height: 1, 2;
     text-align: center;
     letter-spacing: -0.03em;
     text-transform: uppercase;
@@ -25,9 +26,9 @@
 }
 
 @media only screen and (min-width: 768px) {
-   .top-sellers-title {
-    margin-bottom: 50px;
-  }
+    .top-sellers-title {
+        margin-bottom: 50px;
+    }
 }
 
 .sellers-span {
@@ -67,7 +68,10 @@
 
 .top-icon {
     border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
 }
+
+.top-icon:hover {}
 
 .top-paragraph {
     margin-top: 20px;
@@ -81,8 +85,8 @@
 
 @media only screen and (min-width: 768px) {
     .top-paragraph {
-    margin-top: 32px;
-    margin-bottom: 0;
+        margin-top: 32px;
+        margin-bottom: 0;
     }
 }
 
@@ -92,7 +96,7 @@
     margin-left: auto;
     margin-right: auto;
     min-width: 120px;
-        height: 41px;
+    height: 41px;
     padding: 12px 28px;
     background: var(--reserve-bg-color);
     border-radius: 100px;
