виправлення помилок header

--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -56,7 +56,7 @@
     <li>
       <a
         class="mobile-menu-icon-messeg"
-        href="https://Youtube.com"
+        href="https://twitter.com"
         target="_blank"
         rel="noopener noreferrer"
       >
