--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -69,6 +69,7 @@
       class="button-open-mobile"
       aria-expanded="false"
       aria-controls="mobile-menu"
+      aria-label="navigation menu"
     >
       <svg class="header-burger-menu">
         <use href="../img/choco-icons.svg#icon-burger-menu"></use>
