--- a/src/css/products.css
+++ b/src/css/products.css
@@ -3,45 +3,31 @@
 *::after {
   box-sizing: border-box;
 }
-.products {
-  margin-bottom: 105px;
-  bottom: auto;
-}
 @media only screen and (min-width: 768px) {
   .products {
-    margin-bottom: 145px;
+    padding-bottom: 100px;
   }
 }
 @media only screen and (min-width: 1200px) {
   .products {
-    margin-bottom: 173px;
+    padding-bottom: 125px;
   }
 }
 .products-title {
-  text-align: center;
-  font-weight: 600;
-  text-transform: uppercase;
-
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  color: var(--accent-text-color);
-
   margin-bottom: 32px;
 }
 .products-title span {
-  color: var(--main-dark-text-color);
+  color: var(--accent-text-color);
 }
 @media only screen and (min-width: 768px) {
   .products-title {
     margin-bottom: 50px;
     font-size: 24px;
-    line-height: 1.16;
+    line-height: 1.17;
   }
 }
 .swiper {
   width: 100%;
-  position: relative;
 }
 .swiper-wrapper {
   margin-bottom: 20px;
@@ -69,14 +55,10 @@
   object-fit: cover;
   margin-bottom: 8px;
 }
-.products-lower-title {
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 1.33;
+.products-subtitle {
   margin-bottom: 2px;
   letter-spacing: 0.02em;
   text-transform: uppercase;
-  color: var(--main-dark-text-color);
 }
 .products-text {
   font-weight: 400;
@@ -87,20 +69,13 @@
   color: rgba(17, 17, 17, 0.7);
 }
 .products-btn {
-  height: 33px;
   display: block;
-  justify-content: center;
-  min-width: 94px;
+  padding: 7px 19px;
   margin: 0 auto;
-  background: var(--primary-bg-color);
+  background-color: var(--primary-bg-color);
   border: 1px solid rgba(17, 17, 17, 0.1);
   border-radius: 100px;
   color: var(--main-dark-text-color);
-}
-.btn {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 1.3;
   cursor: pointer;
 }
 .products-btn:hover,
@@ -115,9 +90,6 @@
   background: rgba(17, 17, 17, 0.1);
   border: 1px solid #fd9222;
 }
-.swiper-pagination-bullet:not(:last-child) {
-  margin-left: 5px;
-}
 .swiper-pagination-bullet-active {
   width: 28px;
   height: 13px;
@@ -125,27 +97,21 @@
   background: var(--hover-icons-color);
 }
 .swiper-pagination {
-  margin-bottom: 72px;
-  bottom: auto;
-}
-@media only screen and (min-width: 768px) {
-  .swiper-pagination {
-    margin-bottom: 100px;
-  }
-}
-@media only screen and (min-width: 1200px) {
-  .swiper-pagination {
-    margin-bottom: 125px;
-  }
+  position: relative;
 }
 .swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
 .swiper-pagination-horizontal.swiper-pagination-bullets
   .swiper-pagination-bullet {
-  margin: 0 var(--swiper-pagination-bullet-horizontal-gap, 6px);
+  margin: 0;
+}
+.swiper-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet,
+.swiper-pagination-horizontal.swiper-pagination-bullets
+  .swiper-pagination-bullet:not(:last-child) {
+  margin-right: 13px;
 }
 .swiper-horizontal > .swiper-pagination-bullets,
 .swiper-pagination-bullets.swiper-pagination-horizontal,
 .swiper-pagination-custom,
 .swiper-pagination-fraction {
-  bottom: auto;
+  bottom: 1px;
 }
