--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,7 +3,7 @@
     <h2 class="products-title section-title">Our <span>Products</span></h2>
     <div class="swiper my-swiper">
       <ul class="swiper-wrapper">
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -20,7 +20,7 @@
           <button class="products-btn section-btn" type="button">45 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -37,7 +37,7 @@
           <button class="products-btn section-btn" type="button">50 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -54,7 +54,7 @@
           <button class="products-btn section-btn" type="button">66 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -71,7 +71,7 @@
           <button class="products-btn section-btn" type="button">54 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -88,7 +88,7 @@
           <button class="products-btn section-btn" type="button">45 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -105,7 +105,7 @@
           <button class="products-btn section-btn" type="button">50 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
@@ -122,7 +122,7 @@
           <button class="products-btn section-btn" type="button">66 UAH</button>
         </li>
 
-        <li class="swiper-slide">
+        <li class="products-swiper swiper-slide">
           <img
             class="products-img"
             srcset="
